--- a/src/container/shared/Footer.scss
+++ b/src/container/shared/Footer.scss
@@ -7,284 +7,133 @@
     box-sizing: border-box;
 }
 footer {
-    #social-mobile {
-        display: none; 
+ position: relative;
+ min-width: 100%;
+ height: 200px;
+ background: silver;
+.therest>ul {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        padding: 0;
+        font-size: 2em;
+       
+        a {
+            list-style: none;
+            
+             text-decoration: none;
+            color: white;
+        }
     }
-    position: relative;
-    min-width: 100%;
-    height: 250px;
-    background: silver;
-}
 
-.social-btns .btn,
-.social-btns .btn:before,
-.social-btns .btn .fa {
-    -webkit-transition: all 0.35s;
-    transition: all 0.35s;
-    -webkit-transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
-    transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
-}
+    .social-btns {
+        display: flex;
+        justify-content: space-around;
+        a {
+            font-size: 3em;
+            text-align: center;
+            i.fa.fa-facebook {
+                color: lightblue;
+            }
+            i.fa.fa-twitter {
+                color: yellow;
+            }
+            i.fa.fa-envelope {
+                color: red;
+            }
+            i.fa.fa-instagram {
+                color: purple;
+            }
+            i.fa.fa-phone {
+                color: white;
+            }
+        }
+     
+    }
 
-.social-btns .btn:before {
-    top: 90%;
-    left: -110%;
+#social-mobile {
+    display: none;
 }
-
-.social-btns .btn .fa {
-    -webkit-transform: scale(0.8);
-    transform: scale(0.8);
-}
-
-.social-btns .btn.facebook:before {
-    background-color: #3b5998;
-}
-
-.social-btns .btn.facebook .fa {
-    color: #3b5998;
-}
-
-.social-btns .btn.twitter:before {
-    background-color: #3cf;
-}
-
-.social-btns .btn.twitter .fa {
-    color: #3cf;
-}
-
-.social-btns .btn.google:before {
-    background-color: #dc4a38;
-}
-
-.social-btns .btn.google .fa {
-    color: #dc4a38;
-}
-
-.social-btns .btn.dribbble:before {
-    background-color: #f26798;
-}
-
-.social-btns .btn.dribbble .fa {
-    color: #f26798;
-}
-
-.social-btns .btn.skype:before {
-    background-color: #00aff0;
-}
-
-.social-btns .btn.skype .fa {
-    color: #00aff0;
-}
-
-.social-btns .btn:focus:before,
-.social-btns .btn:hover:before {
-    top: -10%;
-    left: -10%;
-}
-
-.social-btns .btn:focus .fa,
-.social-btns .btn:hover .fa {
-    color: #fff;
-    -webkit-transform: scale(1);
-    transform: scale(1);
-}
-
-.social-btns {
-    height: 90px;
-    margin: auto;
-    font-size: 0;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-.social-btns .btn {
-    display: inline-block;
-    background-color: #fff;
-    width: 90px;
-    height: 90px;
-    line-height: 90px;
-    margin: 0 10px;
-    text-align: center;
-    position: relative;
-    overflow: hidden;
-    border-radius: 28%;
-    box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
-    opacity: 0.99;
-}
-
-.social-btns .btn:before {
-    content: '';
-    width: 120%;
-    height: 120%;
-    position: absolute;
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.social-btns .btn .fa {
-    font-size: 38px;
-    vertical-align: middle;
+   .copyright {
+       width: 100%;
+       display: block;
+       text-align: center;
+       margin-top: 25px;
+   }
 }
     @media screen and(max-width:900px) {
-#social-mobile {
-      display: none;
+
+  footer {
+      .therest>ul {
+          width: 100%;
+          display: flex;
+          justify-content: space-around;
+          padding: 0;
+          font-size: 2em;
+          text-decoration: none;
+          a {
+              color: white;
+          }
+      }
+      .social-btns {
+           display: flex;
+           justify-content: space-around;
+           a {
+               font-size: 3em;
+               text-align: center;
+               i.fa.fa-facebook {
+                   color: lightblue;
+               }
+               i.fa.fa-twitter {
+                   color: yellow;
+               }
+               i.fa.fa-envelope {
+                   color: red;
+               }
+               i.fa.fa-instagram {
+                   color: purple;
+               }
+               i.fa.fa-phone {
+                   color: white;
+               }
+           }
+      }
   }
+      #social-mobile {
+         display: none;
+      }
 
-  position: absolute;
-  right: 0;
-  bottom: 90;
-  left: 0;
-  padding: 1rem;
-  min-width: 100%;
-  height: 7.5em;
-  background: silver;
-  .social-btns .btn,
-  .social-btns .btn:before,
-  .social-btns .btn .fa {
-      -webkit-transition: all 0.35s;
-      transition: all 0.35s;
-      -webkit-transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
-      transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
   }
-
-  .social-btns .btn:before {
-      top: 90%;
-      left: -110%;
-  }
-
-  .social-btns .btn .fa {
-      -webkit-transform: scale(0.8);
-      transform: scale(0.8);
-  }
-
-  .social-btns .btn.facebook:before {
-      background-color: #3b5998;
-  }
-
-  .social-btns .btn.facebook .fa {
-      color: #3b5998;
-  }
-
-  .social-btns .btn.twitter:before {
-      background-color: #3cf;
-  }
-
-  .social-btns .btn.twitter .fa {
-      color: #3cf;
-  }
-
-  .social-btns .btn.google:before {
-      background-color: #dc4a38;
-  }
-
-  .social-btns .btn.google .fa {
-      color: #dc4a38;
-  }
-
-  .social-btns .btn.dribbble:before {
-      background-color: #f26798;
-  }
-
-  .social-btns .btn.dribbble .fa {
-      color: #f26798;
-  }
-
-  .social-btns .btn.phoneicon:before {
-      background-color: black;
-  }
-
-  .social-btns .btn.phoneicon .fa {
-      color: black;
-  }
-
-  .social-btns .btn.skype:before {
-      background-color: #00aff0;
-  }
-
-  .social-btns .btn.skype .fa {
-      color: #00aff0;
-  }
-
-  .social-btns .btn:focus:before,
-  .social-btns .btn:hover:before {
-      top: -10%;
-      left: -10%;
-  }
-
-  .social-btns .btn:focus .fa,
-  .social-btns .btn:hover .fa {
-      color: #fff;
-      -webkit-transform: scale(1);
-      transform: scale(1);
-  }
-
-  .social-btns {
-      height: 90px;
-      margin: auto;
-      font-size: 0;
-      text-align: center;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-  }
-
-  .social-btns .btn {
-      display: inline-block;
-      background-color: #fff;
-      width: 90px;
-      height: 90px;
-      line-height: 75px;
-      margin: 0 10px;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-      border-radius: 28%;
-      box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
-      opacity: 0.99;
-  }
-
-  .social-btns .btn:before {
-      content: '';
-      width: 120%;
-      height: 120%;
-      position: absolute;
-      -webkit-transform: rotate(45deg);
-      transform: rotate(45deg);
-  }
-
-  .social-btns .btn .fa {
-      font-size: 38px;
-      vertical-align: middle;
-  }
-}
-footer .social-btns {
-    display: flex;
-    justify-content: space-around;
-}
-
-
-
 
 
          @media screen and(max-width:600px) {
             
              footer {
+                 .therest>ul{
+                     width: 100%;
+                     display: flex;
+                     justify-content: space-around;
+                     padding: 0;
+                     font-size: 2em;
+                     text-decoration: none;
+                     a {
+                         color: white;
+                     }
+
+                 }
                  .social-btns {
                      display: none;
                  }
                  #social-mobile {
                      display: flex;
                      justify-content: space-around;
+                 
                      a  {
-                            margin-top: 1em;
-                             font-size: 2em;
+                           
+                             font-size: 3em;
                              text-align: center;
                                 i.fa.fa-facebook {
+                                    
                                 color: lightblue;
                              }
                                 i.fa.fa-twitter {
@@ -299,12 +148,17 @@ footer .social-btns {
                              i.fa.fa-phone {
                                 color: white;
                              }
-                             
+                     
                         
                      }
                    
                      
                  }
+                         .copyright {
+                             width: 100%;
+                             display: block;
+                             text-align: center;
+                         }
              }
 
             
