--- a/src/container/shared/Header.scss
+++ b/src/container/shared/Header.scss
@@ -21,7 +21,9 @@ html,body {
             justify-content: flex-end;
             padding-right: 25px;
             font-size: 1.6em;
-            .link-1 {             
+           
+            .link-1 {      
+                 vertical-align: middle;
                height: 50px;
                  transition: 0.5s ease;
                    background: #4169e1;
